add keyboard upper cover

--- a/h4k1/h4k1.html
+++ b/h4k1/h4k1.html
@@ -1,4 +1,4 @@
-<b>Partlist exported from /home/heqichen/my/projects/keyboard/qc40/h4k1/h4k1.sch at 17-8-9 下午11:23</b>
+<b>Partlist exported from /home/heqichen/my/projects/keyboard/qc40/h4k1/h4k1.sch at 17-8-22 下午9:36</b>
 <p>
 <table>
 <tr><td><b>Part</b></td><td><b>Value</b></td><td><b>Device</b></td><td><b>Package</b></td><td><b>Description</b></td><td><b></b></td></tr>
@@ -28,15 +28,15 @@
 <tr><td>C24</td><td>1uF</td><td>C-0805</td><td>0805</td><td></td><td></td></tr>
 <tr><td>C25</td><td>1uF</td><td>C-0805</td><td>0805</td><td></td><td></td></tr>
 <tr><td>C26</td><td>1uF</td><td>C-0805</td><td>0805</td><td></td><td></td></tr>
-<tr><td>C27</td><td>10uF</td><td>CPOL-3216</td><td>3216-CPOL</td><td></td><td></td></tr>
+<tr><td>C27</td><td>47uF</td><td>CPOL-6.3X5.4</td><td>CPOL-6.3X5.4</td><td></td><td></td></tr>
 <tr><td>C28</td><td>22nF</td><td>C-0805</td><td>0805</td><td></td><td></td></tr>
 <tr><td>C29</td><td>22nF</td><td>C-0805</td><td>0805</td><td></td><td></td></tr>
-<tr><td>C30</td><td>100uF</td><td>CPOL-7343</td><td>7343-CPOL</td><td></td><td></td></tr>
-<tr><td>C31</td><td>100uF</td><td>CPOL-7343</td><td>7343-CPOL</td><td></td><td></td></tr>
-<tr><td>C32</td><td>1uF</td><td>CPOL-3216</td><td>3216-CPOL</td><td></td><td></td></tr>
-<tr><td>C33</td><td>1uF</td><td>CPOL-3216</td><td>3216-CPOL</td><td></td><td></td></tr>
+<tr><td>C30</td><td>100uF</td><td>CPOL-6.3X5.4</td><td>CPOL-6.3X5.4</td><td></td><td></td></tr>
+<tr><td>C31</td><td>100uF</td><td>CPOL-6.3X5.4</td><td>CPOL-6.3X5.4</td><td></td><td></td></tr>
+<tr><td>C32</td><td>100uF</td><td>CPOL-6.3X5.4</td><td>CPOL-6.3X5.4</td><td></td><td></td></tr>
 <tr><td>C34</td><td>100nF</td><td>C-0805</td><td>0805</td><td></td><td></td></tr>
 <tr><td>C35</td><td>100nF</td><td>C-0805</td><td>0805</td><td></td><td></td></tr>
+<tr><td>C36</td><td>1uF</td><td>C-0805</td><td>0805</td><td></td><td></td></tr>
 <tr><td>D1</td><td></td><td>IN4148WS-SWITCHING-DIODE</td><td>SOD-323</td><td></td><td></td></tr>
 <tr><td>D2</td><td></td><td>IN4148WS-SWITCHING-DIODE</td><td>SOD-323</td><td></td><td></td></tr>
 <tr><td>D3</td><td></td><td>IN4148WS-SWITCHING-DIODE</td><td>SOD-323</td><td></td><td></td></tr>
@@ -87,6 +87,7 @@
 <tr><td>D48</td><td></td><td>IN4148WS-SWITCHING-DIODE</td><td>SOD-323</td><td></td><td></td></tr>
 <tr><td>D49</td><td></td><td>IN4148WS-SWITCHING-DIODE</td><td>SOD-323</td><td></td><td></td></tr>
 <tr><td>D50</td><td></td><td>IN4148WS-SWITCHING-DIODE</td><td>SOD-323</td><td></td><td></td></tr>
+<tr><td>D51</td><td></td><td>IN4148WS-SWITCHING-DIODE</td><td>SOD-323</td><td></td><td></td></tr>
 <tr><td>IC1</td><td>STM32F10XCXT6</td><td>STM32F10XCXT6</td><td>TQFP48</td><td>ST STM32F101/103 48pin LQFP</td><td></td></tr>
 <tr><td>J1</td><td></td><td>PH-5AWD</td><td>PH-5AWD</td><td></td><td></td></tr>
 <tr><td>J2</td><td>PJ-313D-AUDIO-JACK</td><td>PJ-313D-AUDIO-JACK</td><td>PJ-313D</td><td></td><td></td></tr>
@@ -163,19 +164,17 @@
 <tr><td>R19</td><td>0</td><td>R-0805</td><td>0805</td><td></td><td></td></tr>
 <tr><td>R20</td><td>680</td><td>R-0805</td><td>0805</td><td></td><td></td></tr>
 <tr><td>R21</td><td>10k</td><td>R-0805</td><td>0805</td><td></td><td></td></tr>
-<tr><td>R22</td><td>10k</td><td>R-0805</td><td>0805</td><td></td><td></td></tr>
-<tr><td>R23</td><td>10k</td><td>R-0805</td><td>0805</td><td></td><td></td></tr>
-<tr><td>R24</td><td>10k</td><td>R-0805</td><td>0805</td><td></td><td></td></tr>
-<tr><td>R25</td><td>10k</td><td>R-0805</td><td>0805</td><td></td><td></td></tr>
+<tr><td>R22</td><td>100k</td><td>R-0805</td><td>0805</td><td></td><td></td></tr>
+<tr><td>R23</td><td>100k</td><td>R-0805</td><td>0805</td><td></td><td></td></tr>
+<tr><td>R24</td><td>1.5k</td><td>R-0805</td><td>0805</td><td></td><td></td></tr>
+<tr><td>R25</td><td>100k</td><td>R-0805</td><td>0805</td><td></td><td></td></tr>
 <tr><td>R26</td><td>1M</td><td>R-0805</td><td>0805</td><td></td><td></td></tr>
 <tr><td>R27</td><td>1.5k</td><td>R-0805</td><td>0805</td><td></td><td></td></tr>
 <tr><td>R28</td><td>1.5k</td><td>R-0805</td><td>0805</td><td></td><td></td></tr>
 <tr><td>R29</td><td>22</td><td>R-0805</td><td>0805</td><td></td><td></td></tr>
 <tr><td>R30</td><td>22</td><td>R-0805</td><td>0805</td><td></td><td></td></tr>
-<tr><td>R31</td><td>16</td><td>R-0805</td><td>0805</td><td></td><td></td></tr>
-<tr><td>R32</td><td>16</td><td>R-0805</td><td>0805</td><td></td><td></td></tr>
-<tr><td>R33</td><td>330</td><td>R-0805</td><td>0805</td><td></td><td></td></tr>
-<tr><td>R34</td><td>330</td><td>R-0805</td><td>0805</td><td></td><td></td></tr>
+<tr><td>R31</td><td>10</td><td>R-0805</td><td>0805</td><td></td><td></td></tr>
+<tr><td>R32</td><td>10</td><td>R-0805</td><td>0805</td><td></td><td></td></tr>
 <tr><td>R35</td><td>4.7k</td><td>R-0805</td><td>0805</td><td></td><td></td></tr>
 <tr><td>R36</td><td>4.7k</td><td>R-0805</td><td>0805</td><td></td><td></td></tr>
 <tr><td>R37</td><td>15</td><td>R-0805</td><td>0805</td><td></td><td></td></tr>
@@ -184,6 +183,9 @@
 <tr><td>R40</td><td>200</td><td>R-0805</td><td>0805</td><td></td><td></td></tr>
 <tr><td>R41</td><td>200</td><td>R-0805</td><td>0805</td><td></td><td></td></tr>
 <tr><td>R42</td><td>200</td><td>R-0805</td><td>0805</td><td></td><td></td></tr>
+<tr><td>R43</td><td>1.5k</td><td>R-0805</td><td>0805</td><td></td><td></td></tr>
+<tr><td>R44</td><td>10k</td><td>R-0805</td><td>0805</td><td></td><td></td></tr>
+<tr><td>R45</td><td>2.2k</td><td>R-0805</td><td>0805</td><td></td><td></td></tr>
 <tr><td>T1</td><td>DBG</td><td>CLIP-8P-1.27</td><td>CLIP-8P-1.27</td><td></td><td></td></tr>
 <tr><td>U$1</td><td>COOBOC-PLACE</td><td>COOBOC-PLACE</td><td>COOBOC-PLACE</td><td></td><td></td></tr>
 <tr><td>U$2</td><td>M2-MOUNTING-HOLE</td><td>M2-MOUNTING-HOLE</td><td>M2-MOUNTING-HOLE</td><td></td><td></td></tr>
@@ -196,6 +198,8 @@
 <tr><td>U1</td><td>GL850G</td><td>GL850G</td><td>SSOP28</td><td></td><td></td></tr>
 <tr><td>U2</td><td></td><td>AMS1117-33</td><td>SOT223</td><td></td><td></td></tr>
 <tr><td>U3</td><td>PCM2704CDB</td><td>PCM2704CDB</td><td>SSOP28</td><td></td><td></td></tr>
+<tr><td>U4</td><td>74HC138</td><td>74HC138</td><td>SSOP16-208MIL</td><td></td><td></td></tr>
+<tr><td>U5</td><td>ss8550</td><td>SS8550-SOT-323</td><td>SOT-323</td><td></td><td></td></tr>
 <tr><td>X1</td><td></td><td>FC-12M-32.768</td><td>CRYSTAL-2012</td><td></td><td></td></tr>
 <tr><td>X2</td><td></td><td>CSTCC8M00G53-R0-7230-8M-15P-RESONATOR</td><td>7230-RESONATOR</td><td></td><td></td></tr>
 <tr><td>X3</td><td>12MHz</td><td>49S-CRYSTAL</td><td>49S</td><td></td><td></td></tr>
